CUI-5839 Spectrum CSS should be abstracted out (Phase 2) * fix dialog not showing, due to styles overwrite

--- a/reference/dialog/skin.styl
+++ b/reference/dialog/skin.styl
@@ -15,11 +15,6 @@
  * from Adobe Systems Incorporated.
  */
 
-.spectrum-Dialog {
-  spectrum-dialog()
-
-}
-
 .spectrum-Dialog--error {
   .spectrum-Dialog-title {
     spectrum-dialog-title--error()
